# fastAPI_tutorial

BookLibary_Aoth_Final/: requirements.txt
BookLibary_Last_day/: Dockerfile  booklibary.db  pyproject.toml
BookLibary_Last_day/app/: dependencies.py  main.py
BookLibary_Last_day/app/core/: middleware.py  security.py
BookLibary_Last_day/app/models/: user.py
BookLibary_Last_day/app/routers/: auth.py  books.py
BookLibary_Last_day/tests/: test_books.py
BookLibrary/: .env  (+1 more)
Introduction to FastAPI web development with python_full course/Exercise solutions/BookLibary/: .env  Dockerfile  booklibrary.db  compose.yaml  profiling_after.py  profiling_before.py  pyproject.toml  requirements.txt  test.db
Introduction to FastAPI web development with python_full course/Exercise solutions/BookLibary/alembic/: env.py
Introduction to FastAPI web development with python_full course/Exercise solutions/BookLibary/app/: config.py  dependencies.py  main.py
Introduction to FastAPI web development with python_full course/Exercise solutions/BookLibary/app/core/: database.py  middleware.py  security.py
Introduction to FastAPI web development with python_full course/Exercise solutions/BookLibary/app/crud/: book.py
Introduction to FastAPI web development with python_full course/Exercise solutions/BookLibary/app/models/: book.py  users.py
Introduction to FastAPI web development with python_full course/Exercise solutions/BookLibary/app/routers/: auth.py  books.py
Introduction to FastAPI web development with python_full course/Exercise solutions/BookLibary/tests/: test_books.py
(+75 files in other folders)
